feat: add players
