# mock/swagger.yml
@@ -28,21 +28,21 @@ paths: # 接口路径和定义
       tags: # 所属标签，可多个
         - players
       summary: 获取玩家信息列表
-      description: Return info of players.
+      description: Return info list of players.
       operationId: getPlayers # 操作id，映射到实现函数中，必要
-      parameters:
-        - name: accountname
+      parameters: # 参数信息
+        - name: id
           in: query # 参数位于哪里
           description: 用于过滤的账户名称
           schema:
-            type: string
-        - name: pages
-          in: query
-          description: 指定页码
-          schema:
-            type: integer # 整型
-            format: int32 # 格式
-            minimum: 1 # 最小值
+            type: number
+        # - name: pages
+        #   in: query
+        #   description: 指定页码
+        #   schema:
+        #     type: integer # 整型
+        #     format: int32 # 格式
+        #     minimum: 1 # 最小值
       responses:
         200:
           description: OK
@@ -63,10 +63,124 @@ paths: # 接口路径和定义
                         type: array
                         items:
                           $ref: '#/components/schemas/Player' # 复用
+    post:
+      summary: 创建玩家
+      tags:
+        - players
+      description: 创建玩家，返回新创建玩家数据
+      operationId: createPlayer
+      security:
+        - AccessTokenAuth: []
+      parameters:
+        - name: player
+          in: query
+          required: true
+          description: 新建玩家数据
+          schema:
+            $ref: '#/components/schemas/Player'
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  code:
+                    type: integer
+                    format: int32
+                  data:
+                    type: object
+                    properties:
+                      player:
+                        $ref: '#/components/schemas/Player'
+        401:
+          $ref: '#/components/responses/Unauthorized'
+
+                      
+
+  /players/{id}: # 多一个参数
+      get:
+        tags:
+          - players
+        summary: 获取指定玩家
+        operationId: getPlayer
+        description: 获取id对应玩家信息
+        # security: # 定义安全选项，保护路由
+        #   - AccessTokenAuth: []
+        parameters: 
+          - name: id
+            in: path
+            required: true
+            description: 玩家id
+            schema: 
+              type: integer
+              format: int64
+        responses:
+          200:
+            description: OK
+            content:
+              application/json:
+                schema:
+                  type: object
+                  properties:
+                    code:
+                      type: integer
+                      format: int32
+                    data:
+                      type: object
+                      properties:
+                        article:
+                          $ref: '#/components/schemas/Player'
+          401:
+            $ref: '#/components/responses/Unauthorized'
+          404:
+            $ref: '#/components/responses/NotFound'
+
+      put:
+        tags:
+          - players
+        summary: 更新玩家信息
+        description: 更新指定id的玩家信息
+        operationId: updatePlayer
+        security:
+          - AccessTokenAuth: []
+        parameters:
+          - name: id
+            in: path
+            required: true
+            description: 玩家id
+            schema:
+              type: integer
+              format: int64
+          - name: player
+            in: query
+            required: true
+            description: 要更新的玩家数据
+            schema:
+              $ref: '#/components/schemas/Player'
+        responses:
+          200:
+            description: OK
+            content:
+              application/json:
+                schema:
+                  type: object
+                  properties:
+                    code:
+                      type: integer
+                      format: int32
+                    data:
+                      type: object
+                      properties:
+                        player:
+                          $ref: '#/components/schemas/Player'
+          401:
+            $ref: '#/components/responses/Unauthorized'
+          404:
+            $ref: '#/components/responses/NotFound'
 
 
-
-      
   /articles:
     get:
       tags:
@@ -757,6 +871,7 @@ paths: # 接口路径和定义
                         $ref: '#/components/schemas/User'
         401:
           $ref: '#/components/responses/Unauthorized'
+  
 components: # 可复用组件，数据结构，响应定义，安全认证定义等
   securitySchemes:
     AccessTokenAuth:
